--- a/home.html
+++ b/home.html
@@ -1,1 +1,12 @@
-https://nomura-masaya.github.io/diary/home.html
+<!DOCTYPE html>
+<html lang=“ja”>
+  <head>
+    <meta charset=“UFT-8”>
+    <title>ホーム</title>
+    <!-- https://nomura-masaya.github.io/diary/home.html -->
+  </head>
+  <body>
+    <h1>工事中</h1>
+    <p>under construction</p>
+  </body>
+</html>
