--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=“UFT-8”>
     <title>ホーム</title>
+    <link rel="stylesheet" type="text/css" href="diary.css" />
     <!-- https://nomura-masaya.github.io/diary/home.html -->
   </head>
   <body>
