--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html lang=“ja”>
   <head>
     <meta charset=“UFT-8”>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ホーム</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- https://nomura-masaya.github.io/diary/home.html -->
