--- a/home.html
+++ b/home.html
@@ -8,7 +8,9 @@
     <!-- https://nomura-masaya.github.io/diary/home.html -->
   </head>
   <body>
-    <h1>工事中</h1>
-    <p>under construction</p>
+    <main>
+      <h1>工事中</h1>
+      <p>under construction</p>
+    </main>
   </body>
 </html>
