--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <main>
-      <h1>工事中</h1>
+      <h1>blog</h1>
+      <h2>工事中</h2>
       <p>under construction</p>
     </main>
   </body>
