--- a/home.html
+++ b/home.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <main>
+      <table class="head">
+        <tr><th>列-A</th></tr>
+        <tr><td>行-1</td></tr>
+        <tr><td>行-2</td></tr>
+      </table>
       <h1>blog</h1>
       <h2>工事中</h2>
       <p>under construction</p>
