--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
   <body>
     <main>
       <table class="head">
-        <tr><th>列-A</th></tr>
-        <tr><td>行-1</td></tr>
-        <tr><td>行-2</td></tr>
+        <tr bgcolor="#cccccc"><th>列-A</th></tr>
+        <tr bgcolor="#cccccc"><td>行-1</td></tr>
+        <tr bgcolor="#050505"><td>行-2</td></tr>
       </table>
       <p>under construction</p>
     </main>
