--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
-      <table class="head">
-        <tr bgcolor="#cccccc"><th>列-A</th></tr>
+      <table id="head">
+        <tr bgcolor="#0080FF"><th>列-A</th></tr>
         <tr bgcolor="#cccccc"><td>行-1</td></tr>
         <tr bgcolor="#050505"><td>行-2</td></tr>
       </table>
