--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <main>
       <table id="head">
         <tr bgcolor="#0080FF"><th>列-A</th></tr>
-        <tr bgcolor="#58D3F7"><td>行-1</td></tr>
+        <tr bgcolor="#58ACFA"><td>行-1</td></tr>
         <tr bgcolor="#050505"><td>行-2</td></tr>
       </table>
       <p>under construction</p>
