--- a/home.html
+++ b/home.html
@@ -10,9 +10,8 @@
   <body>
     <main>
       <table id="head">
-        <tr bgcolor="#0080FF"><th>列-A</th></tr>
-        <tr bgcolor="#58ACFA"><td>行-1</td></tr>
-        <tr bgcolor="#050505"><td>行-2</td></tr>
+        <tr bgcolor="#0080FF"><th>blog</th></tr>
+        <tr bgcolor="#050505"><td>link</td></tr>
       </table>
       <p>under construction</p>
     </main>
