--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
   <body>
     <main>
       <table id="head">
-        <tr id="head"><td>blog</td></tr>
-        <tr id="link"><td>link</td></tr>
+        <tr class="head"><td>blog</td></tr>
+        <tr class="link"><td>link</td></tr>
       </table>
       <p>under construction</p>
     </main>
