--- a/home.html
+++ b/home.html
@@ -14,6 +14,8 @@
         <tr class="link"><td>link</td></tr>
       </table>
       <p>under construction</p>
+      <article>工事中</article>
+      <br><br><br><br>
     </main>
   </body>
 </html>
