--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       <p>under construction</p>
       <article>工事中</article>
       <br><br><br><br>
-      <h1>github</h1>
+      <div id="foot">github</div>
     </main>
   </body>
 </html>
