--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
   <body>
     <main>
       <table id="head">
-        <tr class="head"><td id="head">blog</td></tr>
-        <tr class="link"><td>link</td></tr>
+        <tr class="head"><td class="head">blog</td></tr>
+        <tr class="link"><td class="link">link</td></tr>
       </table>
       <p>under construction</p>
       <article>工事中</article>
