--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <table id="head">
-        <tr class="head"><td class="head">blog</td></tr>
+        <tr class="head"><td class="head">BLOG</td></tr>
         <tr class="link"><td class="link">link</td></tr>
       </table>
       <p>under construction</p>
