--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       
       <table id="phone_contents">
         <tr>
-          <td width="100%">profilw</td>
+          <td width="100%">profile</td>
         </tr>
         <tr>
           <td width="100%">article</td>
