--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
       
       <table id="pc_contents">
         <tr>
-          <td width="30%">profile</td>
+          <td width="30%">profile<br><img border="0" src="./images/others/prof.png" alt="profile_image"></td>
           <td width="40%">article</td>
           <td width="30%">ads</td>
         </tr>
