--- a/home.html
+++ b/home.html
@@ -17,7 +17,11 @@
       
       <table id="pc_contents">
         <tr>
-          <td width="30%">profile<br><img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image"></td>
+          <td width="30%">
+            <p>PROFILE</p><br>
+            <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image"><br>
+            
+          </td>
           <td width="40%">article</td>
           <td width="30%">ads</td>
         </tr>
