--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
       <table id="pc_contents">
         <tr>
           <td width="30%">
-            <p>PROFILE</p><br>
             <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image"><br>
+            <p id="name">NOMURA Masaya</p>
             
           </td>
           <td width="40%">article</td>
