--- a/home.html
+++ b/home.html
@@ -18,8 +18,19 @@
       <table id="pc_contents">
         <tr>
           <td width="30%">
-            <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image"><br>
-            <p id="name">NOMURA Masaya</p>
+            <br><img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
+            <br><p id="name">NOMURA Masaya</p>
+            <table id="max">
+              <tr>
+                <td width="100%">Gender: male</td>
+              </tr>
+              <tr>
+                <td width="100%">Birth: 1995/12/11</td>
+              </tr>
+              <tr>
+                <td width="100%">Current:</td>
+              </tr>
+            </table>
             
           </td>
           <td width="40%">article</td>
