--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
           <td width="30%">
             <br><img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><p id="name">NOMURA Masaya</p>
-            <table id="max">
+            <table id="profile">
               <tr>
                 <td width="100%">Gender: male</td>
               </tr>
