--- a/home.html
+++ b/home.html
@@ -21,9 +21,9 @@
             <br><img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><p id="name">NOMURA Masaya</p>
             <table id="max">
-              <tr class="profile"><td>Gender: male</td></tr>
-              <tr class="profile"><td>Birth: 1995/12/11</td></tr>
-              <tr class="profile"><td>Current:</td></tr>
+              <tr><td class="profile">Gender: male</td></tr>
+              <tr><td class="profile">Birth: 1995/12/11</td></tr>
+              <tr><td class="profile">Current:</td></tr>
             </table>
           </td>
           <td width="40%">article</td>
