--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
           <td width="30%">
             <br><img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><p id="name">NOMURA Masaya</p>
-            <table id="max">
+            <table id="profile">
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Current:</td></tr>
