--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             <table id="profile">
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
-              <tr><td class="profile">Current:</td></tr>
+              <tr><td class="profile">Education: Wakayama Univ</td></tr>
             </table>
           </td>
           <td width="40%">article</td>
