--- a/home.html
+++ b/home.html
@@ -11,8 +11,13 @@
     <main>
       
       <table id="max">
-        <tr class="head"><td class="head">BLOG</td></tr>
-        <tr class="link"><td class="link">link</td></tr>
+        <tr class="head">
+          <td class="head">BLOG</td>
+        </tr>
+        <tr class="link">
+          <td class="link"><a href="https://nomura-masaya.github.io/diary/home.html" target="_blank">HOME</a></td>
+          <td class="link"><a href="https://www.facebook.com/profile.php?id=100016710490684" target="_blank">FACEBOOK</a></td>
+        </tr>
       </table>
       
       <table id="pc_contents">
