--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
       
       <table id="max">
         <tr class="head">
-          <td class="head">BLOG</td>
+          <td class="head" colspan="2">BLOG</td>
         </tr>
         <tr class="link">
           <td class="link"><a href="https://nomura-masaya.github.io/diary/home.html" target="_blank">HOME</a></td>
