--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
           <td class="head" colspan="2">BLOG</td>
         </tr>
         <tr class="link">
-          <td class="link"><a href="https://nomura-masaya.github.io/diary/home.html" target="_blank">HOME</a></td>
+          <td class="link"><a href="https://nomura-masaya.github.io/diary/home.html">HOME</a></td>
           <td class="link"><a href="https://www.facebook.com/profile.php?id=100016710490684" target="_blank">FACEBOOK</a></td>
         </tr>
       </table>
