--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
       </table>
       
       </br>    
-      <div id="foot">github</div>
+      <table id="foot"><tr><td>github.com</td></tr></table>
     </main>
   </body>
 </html>
