--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
       </table>
       
       </br>    
-      <table id="foot"><tr><td>github.com</td></tr></table>
+      <table id="foot"><tr><td><a href="https://github.com/">github.com</a></td></tr></table>
     </main>
   </body>
 </html>
