--- a/home.html
+++ b/home.html
@@ -31,6 +31,10 @@
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
             </table>
+            [Comments]
+            <table id="profile">
+              <tr><td class="profile">aiueo</td></tr>
+            </table>
           </td>
           <td width="40%">article</td>
           <td width="30%">ads</td>
