--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
             </table>
-            [Comments]
+            <p id="name">[Comments]</p>
             <table id="profile">
               <tr><td class="profile">aiueo</td></tr>
             </table>
