--- a/home.html
+++ b/home.html
@@ -24,13 +24,14 @@
         <tr>
           <td width="30%">
             <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
-            <br><p id="name">NOMURA Masaya</p>
+            <br><p id="name">[NOMURA Masaya]</p>
             <table id="profile">
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
             </table>
+            <br>
             <p id="name">[Comments]</p>
             <table id="profile">
               <tr><td class="profile">aiueo</td></tr>
