--- a/home.html
+++ b/home.html
@@ -34,7 +34,9 @@
             <br>
             <p id="name">Comments</p>
             <table id="profile">
-              <tr><td class="profile">aiueo</td></tr>
+              <tr><td class="profile">
+                I don't eat dolphins.
+              </td></tr>
             </table>
           </td>
           <td width="40%">article</td>
