--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
             <p id="name">Comments</p>
             <table id="profile">
               <tr><td class="profile">
-                I don't eat dolphins.
+                I leave memos about my hobbies.And I don't eat dolphins.
               </td></tr>
             </table>
           </td>
