--- a/home.html
+++ b/home.html
@@ -25,16 +25,14 @@
           <td width="25%">
             <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><br>
-            <p id="name">NOMURA Masaya</p>
             <table id="profile">
+              <tr><td class="profile">[NOMURA Masaya]</td></tr>
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
-            </table>
-            <br>
-            <p id="name">Comments</p>
-            <table id="profile">
+              <tr><td class="profile"></td></tr>
+              <tr><td class="profile">[Comments]</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.And I don't eat dolphins.
               </td></tr>
