--- a/home.html
+++ b/home.html
@@ -33,7 +33,8 @@
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
               <tr><td class="profile">[Comments]</td></tr>
               <tr><td class="profile">
-                I leave memos about my hobbies.And I don't eat dolphins.
+                I leave memos about my hobbies.<br>
+                And I don't eat dolphins.
               </td></tr>
             </table>
           </td>
