--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
+              <tr><td class="profile">&emsp;</td></tr>
               <tr><td class="profile">[Comments]</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.<br>
