--- a/home.html
+++ b/home.html
@@ -26,13 +26,13 @@
             <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><br>
             <table id="profile">
-              <tr><td class="profile">[NOMURA Masaya]</td></tr>
+              <tr><td class="lavel">[NOMURA Masaya]</td></tr>
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
               <tr><td class="profile">&emsp;</td></tr>
-              <tr><td class="profile">[Comments]</td></tr>
+              <tr><td class="lavel">[Comments]</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.<br>
                 And I don't eat dolphins.
