--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
               <tr><td class="lavel">[Comments]</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.<br>
-                And I don't eat dolphins.
+                NOTICE: I don't eat dolphins.
               </td></tr>
             </table>
           </td>
