--- a/home.html
+++ b/home.html
@@ -26,16 +26,16 @@
             <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
             <br><br>
             <table id="profile">
-              <tr><td class="lavel">[NOMURA Masaya]</td></tr>
+              <tr><td class="lavel">NOMURA Masaya</td></tr>
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama Univ</td></tr>
               <tr><td class="profile">&emsp;</td></tr>
-              <tr><td class="lavel">[Comments]</td></tr>
+              <tr><td class="lavel">Comments</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.<br>
-                NOTICE: I don't eat dolphins.
+                [NOTICE] I don't eat dolphins.
               </td></tr>
             </table>
           </td>
