--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
               <tr><td class="profile">Gender: male</td></tr>
               <tr><td class="profile">Birth: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
-              <tr><td class="profile">Education: Wakayama Univ</td></tr>
+              <tr><td class="profile">Education: Wakayama University</td></tr>
               <tr><td class="profile">&emsp;</td></tr>
               <tr><td class="lavel">Comments</td></tr>
               <tr><td class="profile">
