--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
             <table id="profile">
               <tr><td class="lavel">NOMURA Masaya</td></tr>
               <tr><td class="profile">Gender: male</td></tr>
-              <tr><td class="profile">Birth: 1995/12/11</td></tr>
+              <tr><td class="profile">Birthday: 1995/12/11</td></tr>
               <tr><td class="profile">Region: Japan</td></tr>
               <tr><td class="profile">Education: Wakayama University</td></tr>
               <tr><td class="profile">&emsp;</td></tr>
