--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ホーム</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    {% seo %}
     <!-- https://nomura-masaya.github.io/diary/home.html -->
   </head>
   <body>
