--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset=“UFT-8”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ホーム</title>
+    <meta name=”description”>和歌山大学システム工学研究科所属・野村雅也によるブログです。</meta>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- https://nomura-masaya.github.io/diary/home.html -->
   </head>
