--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
       <table id="max">
         <tr class="head">
-          <td class="head" colspan="2">ビボーログ</td>
+          <td class="head" colspan="2"></td>
         </tr>
         <tr class="link">
           <td><a href="https://nomura-masaya.github.io/diary/home.html">HOME</a></td>
