--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
       <table id="pc_contents">
         <tr>
           <td width="27%">
-            <img border="0" src="./images/others/prof.png" width="50%" height="50%"　alt="profile_image">
+            <img border="0" src="./images/others/2018-12-29__02.29.09.jpeg" width="50%" height="50%"　alt="profile_image">
             <br><br>
             <table id="profile">
               <tr><td class="lavel">NOMURA Masaya</td></tr>
