--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
         <tr class="link">
           <td><a href="https://nomura-masaya.github.io/diary/home.html">HOME</a></td>
           <td><a href="https://www.facebook.com/profile.php?id=100016710490684" target="_blank">FACEBOOK</a></td>
+          <td><img border="0" src="./images/others/2018-12-29__02.29.09.jpeg" width="50%" height="50%"　alt="profile_image"></td> 
         </tr>
       </table>
       <br>     
