--- a/home.html
+++ b/home.html
@@ -18,14 +18,13 @@
         <tr class="link">
           <td><a href="https://nomura-masaya.github.io/diary/home.html">HOME</a></td>
           <td><a href="https://www.facebook.com/profile.php?id=100016710490684" target="_blank">FACEBOOK</a></td>
-          <td><img border="0" src="./images/others/prof.ping" width="50%" height="50%"　alt="profile_image"></td> 
         </tr>
       </table>
       <br>     
       <table id="pc_contents">
         <tr>
           <td width="27%">
-            <img border="0" src="./images/others/2018-12-29__02.29.09.jpeg" width="50%" height="50%"　alt="profile_image">
+            <img border="0" src="./images/others/prof.ping" width="50%" height="50%"　alt="profile_image">
             <br><br>
             <table id="profile">
               <tr><td class="lavel">NOMURA Masaya</td></tr>
@@ -37,7 +36,6 @@
               <tr><td class="lavel">Comments</td></tr>
               <tr><td class="profile">
                 I leave memos about my hobbies.<br>
-                [NOTICE] I don't eat dolphins.
               </td></tr>
             </table>
           </td>
