--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset=“UFT-8”>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ホーム</title>
-    <meta name="description" content="和歌山大学システム工学研究科所属・野村雅也によるブログです。" />
+    <title>飯テロ</title>
+    <meta name="description" content="野村雅也のページ。" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- https://nomura-masaya.github.io/diary/home.html -->
   </head>
@@ -17,7 +17,6 @@
         </tr>
         <tr class="link">
           <td><a href="https://nomura-masaya.github.io/diary/home.html">HOME</a></td>
-          <td><a href="https://www.facebook.com/profile.php?id=100016710490684" target="_blank">FACEBOOK</a></td>
         </tr>
       </table>
       <br>     
