--- a/home.html
+++ b/home.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <main>
-      
+      <table>
+        <tr>
+        </tr>
+        <tr>
+          <td>あいうえお</td>
+          <td>かきくけこ</td>
+        </tr>
+      </table>
     </main>
   </body>
 </html>
