--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <main>
       <table>
         <tr>
+          <img border="0" src="./images/20200531.jpg" width="10%" height="10%">
         </tr>
         <tr>
           <td>あいうえお</td>
