--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main>
-      <table>
+      <table align="center">
         <tr>
           <img border="0" src="./images/20200531.jpg" width="10%" height="10%">
         </tr>
