--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
           </td>
         </tr>
         <tr>
-          <td>あいうえお</td>
-          <td>かきくけこ</td>
+          <td align="center">あいうえお</td>
+          <td align="center">かきくけこ</td>
         </tr>
       </table>
     </main>
