--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main>
-      <table align="center" length="75%">
+      <table align="center" width="75%">
         <tr>
           <td>
             <img border="0" src="./images/20200531.jpg" width="10%" height="10%">
