--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
       <table align="center" width="75%">
         <tr>
           <td>
-            <img border="0" src="./images/20200531.jpg" width="40%" height="40%">
+            <img border="0" src="./images/20200531.jpg" width="40%" height="40%" align="center">
           </td>
         </tr>
         <tr>
