--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
           </td>
         </tr>
         <tr>
-          <td align="center">あいうえお</td>
-          <td align="center">かきくけこ</td>
+          <td><center>あいうえお</center></td>
+          <td><center>かきくけこ</center></td>
         </tr>
       </table>
     </main>
