--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
       <table align="center">
         <tr>
           <td>
-            <img border="0" src="./images/20200531.jpg" width="40%" height="40%" align="center">
+            <img border="0" src="./images/20200531.jpg" width="30%" height="30%">
           </td>
         </tr>
         <tr>
