--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
           </td>
         </tr>
         <tr>
-          <td><center>あいうえお</center></td>
-          <td><center>かきくけこ</center></td>
+          <td>あいうえお</td>
+          <td>かきくけこ</td>
         </tr>
       </table>
     </main>
