--- a/home.html
+++ b/home.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <main>
+      <div align="center">
+        <img border="0" src="./images/20200531.jpg" width="30%" height="30%">
+      </div>
       <table align="center">
         <tr>
-          <td>
-            <img border="0" src="./images/20200531.jpg" width="30%" height="30%">
-          </td>
           <td>あいうえお</td>
           <td>かきくけこ</td>
         </tr>
