--- a/home.html
+++ b/home.html
@@ -7,13 +7,13 @@
   <body>
     <main>
       <div align="center">
-        <img border="0" src="./images/20200531.jpg" width="40%" height="40%">
+        <img border="0" src="./images/20200531.jpg" width="55%" height="55%">
       </div>
       <br>
       <table align="center">
         <tr>
-          <td>あいうえお</td>
-          <td>かきくけこ</td>
+          <td>さやえんどうとエリンギのスパイシー豚肉炒め</td>
+          <td>ごま油が香るニンジンとカブのけんちん汁</td>
         </tr>
       </table>
     </main>
