--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>さやえんどうとエリンギのスパイシー豚肉炒め</td>
+          <td>牡蠣醤油と黒胡椒の炒め物（豚肉・さやえんどう・エリンギ）</td>
         </tr>
         <tr>
-          <td>ごま油が香るニンジンとカブのけんちん汁</td>
+          <td>ごま油香るけんちん汁（ニンジン・カブ・ゴボウ・木綿とうふ）</td>
         </tr>
       </table>
     </main>
