--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>豚肉とさやえんどう、エリンギの炒め物（牡蠣醤油と黒胡椒）</td>
+          <td>牡蠣醤油と黒胡椒が効いた炒め物（豚肉・さやえんどう・エリンギ）</td>
         </tr>
         <tr>
-          <td>にんじんとかぶ、ごぼう、木綿とうふのけんちん汁（ごま油風味）</td>
+          <td>ごま油香るけんちん汁（人参・かぶ・ごぼう・木綿とうふ）</td>
         </tr>
       </table>
     </main>
