--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>牡蠣醤油と黒胡椒が効いた炒め物（豚肉・さやえんどう・エリンギ）</td>
+          <td>左：牡蠣しょうゆと黒胡椒がきいた炒め物（豚肉・さやえんどう・エリンギ）</td>
         </tr>
         <tr>
-          <td>ごま油香るけんちん汁（人参・かぶ・ごぼう・木綿とうふ）</td>
+          <td>奥：ごま油香るけんちん汁（人参・かぶ・ごぼう・木綿とうふ）</td>
         </tr>
       </table>
     </main>
