--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang=“ja”>
   <head>
     <meta charset=“UFT-8”>
-    <title>飯テロ</title>
+    <title>ごはんのじかん</title>
   </head>
   <body>
     <main>
