--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
           <td>左：牡蠣しょうゆと黒胡椒がきいた炒め物（豚肉・さやえんどう・エリンギ）</td>
         </tr>
         <tr>
-          <td>奥：ごま油香るけんちん汁（人参・かぶ・ごぼう・木綿とうふ）</td>
+          <td>奥：ごま油香るけんちん汁（にんじん・かぶ・ごぼう・木綿とうふ）</td>
         </tr>
       </table>
     </main>
