--- a/article/home.html
+++ b/article/home.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <main>
-
+      <div align ="center">
+        <br><a href="リンク先のＵＲＬ">20200531</a><br>
+        <br><a href="リンク先のＵＲＬ">20200613</a><br>
+      </div>
     </main>
   </body>
 </html>
