--- a/article/home.html
+++ b/article/home.html
@@ -7,8 +7,8 @@
   <body>
     <main>
       <div align ="center">
-        <br><a href="リンク先のＵＲＬ">20200531</a><br>
-        <br><a href="リンク先のＵＲＬ">20200613</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20200531.html">20200531</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20200613.html">20200613</a><br>
       </div>
     </main>
   </body>
