--- a/article/20200613.html
+++ b/article/20200613.html
@@ -2,7 +2,7 @@
 <html lang=“ja”>
   <head>
     <meta charset=“UFT-8”>
-    <title>ごはんのじかん</title>
+    <title>ふるさと関西（ただしカンザス州）の味</title>
   </head>
   <body>
     <main>
