--- a/article/20200613.html
+++ b/article/20200613.html
@@ -2,7 +2,7 @@
 <html lang=“ja”>
   <head>
     <meta charset=“UFT-8”>
-    <title>ふるさと関西（ただしカンザス州）の味</title>
+    <title>ふるさと関西の味…？</title>
   </head>
   <body>
     <main>
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>左：牡蠣しょうゆと黒胡椒がきいた炒め物（豚肉・さやえんどう・エリンギ）</td>
+          <td>KANSAS City ビーフステーキのコピー</td>
         </tr>
         <tr>
-          <td>奥：ごま油香るけんちん汁（にんじん・かぶ・ごぼう・木綿とうふ）</td>
+          <td>ガーリックライスは完全に再現できたと言っても良い<br>ステーキは実際にはウェルダン</td>
         </tr>
       </table>
     </main>
