--- a/article/20200613.html
+++ b/article/20200613.html
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>KANSAS City ビーフステーキのコピー</td>
+          <td>UKカフェ名物 KANSAS City ビーフステーキのコピー</td>
         </tr>
         <tr>
-          <td>ガーリックライスは完全に再現できたと言っても良い<br>ステーキは実際にはウェルダン</td>
+          <td>ガーリックライスは再現できたと言っても良い。ステーキはウェルダンで提供されることが多い。</td>
         </tr>
       </table>
     </main>
