--- a/article/20200613.html
+++ b/article/20200613.html
@@ -15,7 +15,11 @@
           <td>UKカフェ名物 KANSAS City ビーフステーキのコピー</td>
         </tr>
         <tr>
-          <td>ガーリックライスは再現できたと言っても良い。ステーキはウェルダンで提供されることが多い。</td>
+          <td>
+            ガーリックライスは再現できたと言っても良い出来だった。
+            <br>
+            ステーキはウェルダンで提供されることが多い。
+          </td>
         </tr>
       </table>
     </main>
