--- a/article/20200613.html
+++ b/article/20200613.html
@@ -18,7 +18,7 @@
           <td>
             ガーリックライスは再現できたと言っても良い出来だった。
             <br>
-            ステーキはウェルダンで提供されることが多い。
+            実際のステーキはウェルダンで提供されることが多いほか、ライスの量はさらに多い。
           </td>
         </tr>
       </table>
