--- a/article/20200613.html
+++ b/article/20200613.html
@@ -12,7 +12,7 @@
       <br>
       <table align="center">
         <tr>
-          <td>UKカフェ名物 KANSAS City ビーフステーキのコピー。</td>
+          <td>UKカフェ「KANSAS City ビーフステーキ」のコピー。</td>
         </tr>
         <tr>
           <td>
