--- a/article/home.html
+++ b/article/home.html
@@ -9,6 +9,7 @@
       <div align ="center">
         <br><a href="https://nomura-masaya.github.io/diary/article/20200531.html">20200531</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20200613.html">20200613</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20200823.html">20200613</a><br>
       </div>
     </main>
   </body>
