--- a/article/20200823.html
+++ b/article/20200823.html
@@ -12,10 +12,10 @@
       <br>
       <table align="center">
         <tr>
-          <td>左：牡蠣しょうゆと黒胡椒がきいた炒め物（豚肉・さやえんどう・エリンギ）</td>
+          <td>大阪のたまごサンドは基本的に出汁巻きですが、今回はオムレツで再現。</td>
         </tr>
         <tr>
-          <td>奥：ごま油香るけんちん汁（にんじん・かぶ・ごぼう・木綿とうふ）</td>
+          <td>新大阪駅にもあるヨコオさんの厚焼きたまごカツサンドが個人的におすすめです。</td>
         </tr>
       </table>
     </main>
