--- a/article/20201016.html
+++ b/article/20201016.html
@@ -7,7 +7,7 @@
   <body>
     <main>
       <div align="center">
-        <img border="0" src="../images/20201016.JPG" width="50%" height="50%">
+        <img border="0" src="../images/_20201016_074129.JPG" width="50%" height="50%">
       </div>
       <br>
       <table align="center">
