--- a/article/home.html
+++ b/article/home.html
@@ -10,6 +10,7 @@
         <br><a href="https://nomura-masaya.github.io/diary/article/20200531.html">20200531</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20200613.html">20200613</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20200823.html">20200613</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20201016.html">20200613</a><br>
       </div>
     </main>
   </body>
