--- a/article/home.html
+++ b/article/home.html
@@ -12,6 +12,7 @@
         <br><a href="https://nomura-masaya.github.io/diary/article/20200823.html">20200823</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20201016.html">20201016</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20201101.html">20201101</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20201101.html">20201121</a><br>
       </div>
     </main>
   </body>
