--- a/article/home.html
+++ b/article/home.html
@@ -14,6 +14,7 @@
         <br><a href="https://nomura-masaya.github.io/diary/article/20201101.html">20201101</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20201121.html">20201121</a><br>
         <br><a href="https://nomura-masaya.github.io/diary/article/20210108.html">20210108</a><br>
+        <br><a href="https://nomura-masaya.github.io/diary/article/20210205.html">20210108</a><br>
       </div>
     </main>
   </body>
