--- a/article/20210205.html
+++ b/article/20210205.html
@@ -9,13 +9,10 @@
       <div align="center">
         <img border="0" src="../images/2021020501.JPG" width="50%" height="50%">
       </div>
-      <div align="center">
-        <img border="0" src="../images/2021020502.JPG" width="50%" height="50%">
-      </div>
       <br>
       <table align="center">
         <tr>
-          <td>トルコ料理店が無いので作りました。</td>
+          <td>近くにトルコ料理店が無いので作りました。</td>
         </tr>
         <tr>
           <td>ラム肉とスパイスがいい感じ。</td>
