--- a/article/20210205.html
+++ b/article/20210205.html
@@ -12,7 +12,7 @@
       <br>
       <table align="center">
         <tr>
-          <td>近くにトルコ料理店が無いので作りました。</td>
+          <td>近くにトルコ料理店が無いのでケバブを作りました。</td>
         </tr>
         <tr>
           <td>ラム肉とスパイスがいい感じ。</td>
